modified:   .gitignore new file:   _routes.rest new file:   controllers/presidents.js modified:   controllers/temples.js new file:   middleware/authenticate.js modified:   package-lock.json modified:   package.json modified:   routes.rest modified:   routes/index.js new file:   routes/presidents.js modified:   routes/temples.js modified:   server.js modified:   swagger.js modified:   swagger.json
