# routes/index.js
@@ -1,7 +1,18 @@
 const express = require('express');
+const passport = require('passport');
 const router = express.Router();
 
 router.use('/', require('./swagger'));
 router.use('/temples', require('./temples'));
+router.use('/presidents', require('./presidents'));
+
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+router.get('/logout', function(req, res, next) {
+    req.logout(function(err){
+        if (err) { return next(err); }
+        res.redirect('/');
+    });
+});
 
 module.exports = router;
